# llmops-sow-generator-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd-dev.yml  cd-prod.yml  ci.yml
.streamlit/: config.toml
baselines/: README.md
data/: mock_crm.json  mock_opportunities.json  mock_products.json
data/compliance_rules/: compliance_rules.json
data/historical_sows/: SOW-2022-001-acme-payments.md  SOW-2023-001-acme-payments.md  SOW-2023-002-techcorp-fraud.md
data/product_kb/: data_analytics.md  fraud_detection.md  real_time_payments.md
data/templates/: standard_sow_template.md
docs/: ARCHITECTURE_DECISIONS.md  AUDIT_LOGGING.md  CI_CD.md  IMPLEMENTATION_PLAN.md  LLM_EVALUATION.md  NAMING_CONVENTIONS.md  PHASE2_COMPLETION.md  TASKS.md  TESTING.md  UI_DESIGN.md  USE_CASE_FLOWS.md
infra/docker/: Dockerfile
scripts/: index_documents.py  run_evals.py  test_model.py
src/agent/: __init__.py  config.py
src/agent/core/: __init__.py  planner.py
src/agent/prompts/: __init__.py  compliance_checker.yaml  planner.yaml  sow_generator.yaml
src/agent/tools/: __init__.py  compliance.py  content.py  context.py  research.py
src/agent/utils/: __init__.py  doc_handler.py
src/api/: audit.py  dependencies.py  main.py  schemas.py
src/api/routes/: __init__.py  research_routes.py  sow_routes.py
src/rag/: __init__.py  embeddings.py  indexer.py  retriever.py
src/ui/: app.py
src/ui/components/: styles.py
src/ui/pages/: 0_home.py  1_generate_sow.py  2_review_sow.py  3_client_research.py  4_product_research.py
tests/: conftest.py
tests/evals/: metrics.py  test_metrics.py  test_sow_generation.py  test_sow_review.py
tests/evals/eval_datasets/: research_cases.json  sow_creation_cases.json  sow_review_cases.json
tests/integration/: test_agent_flows.py  test_api_endpoints.py  test_rag_pipeline.py
tests/manual/: README.md  manual_agent_test.py  test_phase2.py  verify_phase2.py
tests/unit/: test_api_schemas.py  test_compliance_tools.py  test_content_tools.py  test_context_tools.py  test_prompt_loading.py  test_research_tools.py
