[project]
name = "sow-generator"
version = "0.1.0"
description = "AI agent for automated SOW generation, review, and research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.1",
    "langchain-core>=0.1",
    "langchain-aws>=0.2",
    "boto3>=1.34",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "streamlit>=1.31",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "chromadb>=0.4",
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "black>=24.1",
    "mypy>=1.8",
    "httpx>=0.26",
    "types-PyYAML",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__
"tests/**" = ["F401", "F811"]  # Allow test fixtures
"src/ui/**" = ["E402"]  # Allow module level imports after sys.path updates in Streamlit
"tests/manual/**" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = true
warn_return_any = false  # To reduce noise for now
